# solanaprivacy

./: README.md  README_PRIVACY.md  USER_GUIDE.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/vault/: Cargo.toml
anchor/programs/vault/src/: lib.rs  privacy_payments.rs
anchor/tests/: vault.spec.ts
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/payments/: page.tsx
app/strategies/[id]/: page.tsx
components/: GovernanceView.tsx  PortfolioTracker.tsx  PrivateUserView.tsx  PublicExplorerView.tsx  StrategiesView.tsx  StrategyMarketplace.tsx  SubscribeToTrader.tsx
components/providers/: ArciumProvider.tsx  WalletProvider.tsx
components/ui/: smooth-cursor.tsx
lib/: confidential.ts  crypto.ts  helpers.ts  payment-sdk.ts  spectre-sdk.ts  vault-idl.json
lib/hooks/: useUserPositions.ts
tests/: privacy-payments.test.ts
