[package]
name = "vault"
version = "0.1.0"
description = "A simple SOL vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.18"
